# Bedrock

./: .gitignore  BEDROCK.md  bedrock-failover.py
dev-witness/: README.md  demo_two_node.py  run.py  test_multilink.py  test_self_fence.py
docs/: 01-storage-stack.md  02-drbd-replication.md  03-witness-and-orchestrator.md  04-boot-recovery-gaps.md  05-drbd-internals.md  README.md  architecture.md  cluster-protocol-design.md  cluster-protocol-v1-plan.md  conventions.md  lessons-log.md  md2html.py
docs/actions/: init-cluster.md  install-bootstrap.md  iso-library.md  join-cluster.md  vm-convert.md  vm-create.md  vm-import-export.md  vm-lifecycle.md  vm-migrate.md  vm-settings.md
docs/components/: drbd.md  exporters.md  metrics.md  mgmt-dashboard.md  storage-tier-progression.md  storage-tiers.md  tasks.md
docs/reference/: api.md  files.md  logs.md  ports.md
docs/scenarios/: clean-rerun-2026-04-30.md  clean-run-2026-04-30-PLAN.md  network-partition.md  node-rejoin.md  power-loss-all.md  power-loss-primary.md  power-loss-secondary.md  rustfs-3node-trial-2026-04-27.md  rustfs-4node-upstream-bug-proof-2026-04-27.md  rustfs-shared-lock-leak-2026-04-27.md  rustfs-shared-lock-leak-lab-validation-2026-04-30.md  split-brain.md  storage-tiers-1to4-2026-04-30.md  storage-tiers-deep-dive-2026-04-30.md  storage-trial-2026-04-27.md  test-run-2026-04-20.md
installer/: bedrock  bedrock-watcher  install.sh  setup-host-bridge.sh
installer/binaries/: bedrock-rust  vm_exporter.py
mgmt/: app.py  index.html  tasks.py  victoria.py  vm_exporter.py  ws.py
rust/: Cargo.toml
rust/bedrock-rust/: Cargo.toml
rust/bedrock-rust/src/: config.rs  ipc.rs  log_store.rs  main.rs  payload.rs  peer.rs  witness.rs
testbed/: serve.py  spawn.py  test_e2e.sh
(+75 files in other folders)
