[package]
name = "bedrock-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bedrock cluster-protocol daemon — append-only hash-chained log + Echo witness client"

[[bin]]
name = "bedrock-rust"
path = "src/main.rs"

[dependencies]
# Echo witness wire format + crypto. Pulled as a path dep so we can iterate
# on the protocol crate locally; will be a git or registry dep once stable.
bedrock-echo-proto = { path = "../../../../Bedrock-Echo/crates/bedrock-echo-proto" }

# Hash chain
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Encoding for log payloads (matches design doc §8: MessagePack with version envelope)
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Errors
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# UUID for cluster bootstrap
uuid = { version = "1", features = ["v4"] }

# Hex for CLI display
hex = "0.4"

# OS RNG for ephemeral X25519 keypairs (BOOTSTRAP)
rand_core = { version = "0.6", features = ["std", "getrandom"] }

# Logging unused-handle suppression in dev only — phase-out marker.
once_cell = "1"

# Daemon config file
toml = "0.8"

# Aggressive TCP keepalive on peer links so iptables/cable-cut partitions
# tear down within ~15s instead of the default ~2h Linux keepalive timer.
# (Without this, peer.rs's PeerRegistry would still report a dead peer
# as connected, fooling the weighted-vote quorum count.)
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tempfile = "3"
